# src/routes/comments.ts
@@ -5,9 +5,11 @@ import Joi from "joi";
 import Blog from "../models/blogModels";
 import invalidJson from "./invalidJson";
 import isAdmin from "./isAdmin";
+import cors from "cors";
 
 const commentRoute: Router = express.Router();
 
+commentRoute.use(cors());
 commentRoute.use(express.json());
 commentRoute.use(express.urlencoded({
     extended: true
@@ -31,7 +33,10 @@ function validateComment(data: any){
 
 commentRoute.get("/", async (req: Request, res: Response) => {
 	let comments = await Comment.find({});
-	res.status(200).json(comments);
+	res.status(200).json({
+        "status":"success",
+        "message": comments
+    });
 });
 
 // All comments by ID
@@ -52,6 +57,37 @@ commentRoute.get("/:id", async (req: Request, res: Response) => {
         });
     }
 });
+
+// Approve a comment
+
+commentRoute.put("/:id", isAdmin, async(req: Request, res: Response)=>{
+    let id = req.params.id;
+    try{
+        let comment: IComment | null = await Comment.findById(id);
+        if(comment){
+            comment.approved = !comment.approved;
+            let status = comment.approved;
+            comment.save();
+            res.status(200).json({
+                "status": "success",
+                "message": `Comment ${status ? 'approved':'denied'}`
+            });
+        }
+        else{
+            res.status(404).json({
+                "status": "fail",
+                "message": "Comment not found"
+            });
+        }
+    }
+    catch{
+            res.status(500).json({
+                "status": "fail",
+                "message": "Internal server error"
+            });
+    }
+});
+
 
 // Delete Comment
 
@@ -86,7 +122,14 @@ commentRoute.delete("/:id",isAdmin, async (req: Request, res: Response) => {
 });
 
 // New comment
-
+function escapeHtml(html: string) {
+	return html
+		.replace(/&/g, "&amp;")
+		.replace(/</g, "&lt;")
+		.replace(/>/g, "&gt;")
+		.replace(/"/g, "&quot;")
+		.replace(/'/g, "&#039;");
+}
 commentRoute.post("/", async(req: Request, res: Response)=>{
     let check = validateComment(req.body);
     if(check.error){
@@ -96,7 +139,9 @@ commentRoute.post("/", async(req: Request, res: Response)=>{
         });
     }
     else{
-        let blogId = req.body.blogId
+        let blogId = req.body.blogId;
+        req.body.comment = escapeHtml(req.body.comment);
+        req.body.userName = escapeHtml(req.body.userName);
         try{
             if(await Blog.findById(blogId)){
                 let newComment = await Comment.create(req.body);
