# src/routes/messages.ts
@@ -4,13 +4,14 @@ import Joi from "joi";
 import Message, { IMessage } from "../models/messageModel";
 import isAdmin from "./isAdmin";
 import invalidJson from "./invalidJson";
+import cors from "cors";
 
 // Router
 
 let messagesRoute: Router = express.Router();
 
 // Express body parsers
-
+messagesRoute.use(cors());
 messagesRoute.use(express.json());
 messagesRoute.use(express.urlencoded({
 	extended: true
@@ -33,6 +34,14 @@ function validateMessage(message: object) {
  messagesRoute.use(invalidJson);
 
 // New Message
+function escapeHtml(html: string) {
+	return html
+		.replace(/&/g, "&amp;")
+		.replace(/</g, "&lt;")
+		.replace(/>/g, "&gt;")
+		.replace(/"/g, "&quot;")
+		.replace(/'/g, "&#039;");
+}
 
 messagesRoute.post("/", async (req: Request, res: Response) => {
 	let check = validateMessage(req.body);
@@ -42,6 +51,9 @@ messagesRoute.post("/", async (req: Request, res: Response) => {
 			error: check.error.message,
 		});
 	} else {
+		req.body.name = escapeHtml(req.body.name);
+		req.body.email = escapeHtml(req.body.email);
+		req.body.message = escapeHtml(req.body.message);
 		let message: IMessage = await Message.create(req.body);
 		res.status(201).json({
 			status: "success",
@@ -56,7 +68,7 @@ messagesRoute.post("/", async (req: Request, res: Response) => {
 messagesRoute.get("/", isAdmin, async (req: Request, res: Response) => {
 	let messages: IMessage[] = await Message.find({});
 	if(messages.length == 0){
-		return res.status(404).json({
+		return res.status(200).json({
 			"status": "fail",
 			"message": "No messages found"
 		});
@@ -73,10 +85,12 @@ messagesRoute.delete("/:id",isAdmin, async (req: Request, res: Response) => {
     let id = req.params.id;
     if(id){
         if(await Message.findByIdAndDelete(id)){
-            res.status(200).json({"message":"Message Deleted"});
+            res.status(200).json({"status": "success","message":"Message Deleted"});
         }
         else{
-            res.status(404).json({"error":"Message not found"});
+            res
+							.status(404)
+							.json({ "status": "fail", "message": "Message not found" });
         }
     }
 });
@@ -84,7 +98,7 @@ messagesRoute.delete("/:id",isAdmin, async (req: Request, res: Response) => {
 // Default
 messagesRoute.all("/", (req: Request, res: Response) => {
 	res.json({
-		message: "Messages endpoint",
+		"status":"success", "message": "Messages endpoint",
 	});
 });
 
